[package]
name = "simple-json-filter"
version = "0.1.0"
edition = "2021"
description = "simple json filter usindg serde_json"
keywords = ["json", "filter"]
categories = ["json", "filter"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.96"
